# mapistories

./: manage.py  pyproject.toml
core/: views.py
core/static/core/: script.js  world_bc200.js
core/templates/core/: about.html  index.html
mapistories/: asgi.py  settings.py  urls.py  wsgi.py
