[tool.poetry]
name = "mapistories"
version = "0.1.0"
description = "History narration using maps"
authors = ["SuryaSankar <suryashankar.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
